# sdf-monitorability

./: .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: blank.yml  ci.yml  pr.yml
notebooks/: inference_api.ipynb  minimal_helpful_only_setting.ipynb
sdf_monitorability/: __init__.py  main.py
tests/: dummy_test.py  test_nothing.py
