[project]
name = "sdf-monitorability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.65.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "openai>=1.104.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.pyright]
venvPath = "."        
venv = ".venv"         
strict = ["**/*.py"]
ignore = ["external", "notebooks"]

[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"
test = "pytest"
# run all the above
all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["."] 
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["external", "notebooks"]
